--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,2 @@
-# Ignore Pycharm env #
-.idea/
-
-# Ignore virtual environment files #
-venv/
-
-# Ignore DecryptDock contents except .keep file #
-DecryptDock/*
-!DecryptDock/.keep
+.env
+/env
